--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,29 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '3.4.1'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'org.example'
-version = '1.0-SNAPSHOT'
+group = 'com.example'
+version = '0.0.1-SNAPSHOT'
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    // [1] 스프링 웹 라이브러리 의존성
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    // [2] mysql 라이브러리 의존성
+    runtimeOnly 'com.mysql:mysql-connector-j'
 }
 
-test {
+tasks.named('test') {
     useJUnitPlatform()
 }
